Included 4 buttons on the dashboard and linked them to the respective classes

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -23,6 +23,8 @@
         </activity>
         <activity android:name=".PreviousQuestionnaires">
         </activity>
+        <activity android:name=".Setting">
+        </activity>
     </application>
 
 </manifest>
