--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -17,7 +17,8 @@
         </activity>
         <activity
                 android:name=".Dashboard"
-                android:label="Dashboard">
+                android:label="Dashboard"
+                android:theme="@style/AppTheme.NoActionBar">
         </activity>
         <activity
                 android:name=".QuestionnaireMenu"
