--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,48 +1,49 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-          package="uk.ucl.group21.currentviewapp">
+    package="uk.ucl.group21.currentviewapp">
 
     <application
-            android:allowBackup="true"
-            android:icon="@mipmap/ic_launcher"
-            android:label="@string/app_name"
-            android:supportsRtl="true"
-            android:theme="@style/AppTheme">
+        android:allowBackup="true"
+        android:icon="@mipmap/ic_launcher"
+        android:label="@string/app_name"
+        android:supportsRtl="true"
+        android:theme="@style/AppTheme">
         <activity android:name=".LoginScreen">
             <intent-filter>
-                <action android:name="android.intent.action.MAIN"/>
+                <action android:name="android.intent.action.MAIN" />
 
-                <category android:name="android.intent.category.LAUNCHER"/>
+                <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
         <activity
-                android:name=".Dashboard"
-                android:label="Dashboard">
-        </activity>
+            android:name=".Dashboard"
+            android:label="Dashboard" />
         <activity
-                android:name=".QuestionnaireMenu"
-                android:label="Questionnaire Menu">
-        </activity>
+            android:name=".QuestionnaireMenu"
+            android:label="Questionnaire Menu" />
         <activity
-                android:name=".LoginError"
-                android:label="Login Error">
-        </activity>
+            android:name=".LoginError"
+            android:label="Login Error" />
         <activity
-                android:name=".PreviousQuestionnaires"
-                android:label="Previous Questionnaires">
-        </activity>
+            android:name=".PreviousQuestionnaires"
+            android:label="Previous Questionnaires" />
         <activity
-                android:name=".Setting"
-                android:label="Setting">
-        </activity>
+            android:name=".Setting"
+            android:label="Setting" />
         <activity
-                android:name=".Help"
-                android:label="Help">
-        </activity>
+            android:name=".Help"
+            android:label="Help" />
         <activity
-                android:name=".Q1ToQ10"
-                android:label="Questions 1-10">
-        </activity>
+            android:name=".Q1ToQ10"
+            android:label="Questions 1-10" />
+        <activity
+            android:name=".DatabaseMainActivity"
+            android:label="@string/title_activity_database_main"
+            android:theme="@style/AppTheme.NoActionBar" />
+        <activity
+            android:name=".Questionnaire_Overview"
+            android:label="@string/title_activity_questionnaire__overview"
+            android:theme="@style/AppTheme.NoActionBar"></activity>
     </application>
 
 </manifest>
