Added the navigation menu to the Help screen

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -37,7 +37,8 @@
 
         <activity
                 android:name=".Help"
-                android:label="Help"/>
+                android:label="Help"
+                android:theme="@style/AppTheme.NoActionBar"/>
 
         <activity
                 android:name=".Q1ToQ10"
