Added navigation menu to Questionnaire Menu and made made it match_paret sized.

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -21,7 +21,8 @@
                 android:theme="@style/AppTheme.NoActionBar"/>
         <activity
                 android:name=".QuestionnaireMenu"
-                android:label="Questionnaire Menu"/>
+                android:label="Questionnaire Menu"
+                android:theme="@style/AppTheme.NoActionBar"/>
 
         <activity
                 android:name=".LoginError"
