Added navigation menu to Previous Questionnaires and tested the Spinner for sorting.

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -30,7 +30,8 @@
 
         <activity
                 android:name=".PreviousQuestionnaires"
-                android:label="Previous Questionnaires"/>
+                android:label="Previous Questionnaires"
+                android:theme="@style/AppTheme.NoActionBar"/>
 
         <activity
                 android:name=".Setting"
