Included the questionnaire screens from Kodarie & made changes to them.

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -44,8 +44,27 @@
 
         <activity
                 android:name=".Q1ToQ10"
-                android:label="Questions 1-10">
-        </activity>
+                android:label="Questions 1-10"/>
+
+        <activity
+                android:name=".Q11ToQ20"
+                android:label="Questions 11-20"/>
+
+        <activity
+                android:name=".Q21ToQ30"
+                android:label="Questions 21-30"/>
+
+        <activity
+                android:name=".Q31ToQ37"
+                android:label="Questions 31-37"/>
+
+        <activity
+                android:name=".Q38ToQ44"
+                android:label="Questions 38-44"/>
+
+        <activity
+                android:name=".Q45ToQ50"
+                android:label="Questions 45-50"/>
     </application>
 
 </manifest>
