Changed launch model to single instance and implemented instance flags in each class.

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -18,11 +18,13 @@
         <activity
                 android:name=".Dashboard"
                 android:label="Dashboard"
-                android:theme="@style/AppTheme.NoActionBar"/>
+                android:theme="@style/AppTheme.NoActionBar"
+                android:launchMode="singleInstance"/>
         <activity
                 android:name=".QuestionnaireMenu"
                 android:label="Questionnaire Menu"
-                android:theme="@style/AppTheme.NoActionBar"/>
+                android:theme="@style/AppTheme.NoActionBar"
+                android:launchMode="singleInstance"/>
 
         <activity
                 android:name=".LoginError"
@@ -31,46 +33,55 @@
         <activity
                 android:name=".PreviousQuestionnaires"
                 android:label="Previous Questionnaires"
-                android:theme="@style/AppTheme.NoActionBar"/>
+                android:theme="@style/AppTheme.NoActionBar"
+                android:launchMode="singleInstance"/>
 
         <activity
                 android:name=".Setting"
-                android:label="Setting"/>
+                android:label="Setting"
+                android:launchMode="singleInstance"/>
 
         <activity
                 android:name=".Help"
                 android:label="Help"
-                android:theme="@style/AppTheme.NoActionBar"/>
+                android:theme="@style/AppTheme.NoActionBar"
+                android:launchMode="singleInstance"/>
 
         <activity
                 android:name=".Q1ToQ10"
                 android:label="Questions 1-10"
-                android:theme="@style/AppTheme.NoActionBar"/>
+                android:theme="@style/AppTheme.NoActionBar"
+                android:launchMode="singleInstance"/>
 
         <activity
                 android:name=".Q11ToQ20"
                 android:label="Questions 11-20"
-                android:theme="@style/AppTheme.NoActionBar"/>
+                android:theme="@style/AppTheme.NoActionBar"
+                android:launchMode="singleInstance"/>
 
         <activity
                 android:name=".Q21ToQ30"
                 android:label="Questions 21-30"
-                android:theme="@style/AppTheme.NoActionBar"/>
+                android:theme="@style/AppTheme.NoActionBar"
+                android:launchMode="singleInstance"/>
 
         <activity
                 android:name=".Q31ToQ37"
                 android:label="Questions 31-37"
-                android:theme="@style/AppTheme.NoActionBar"/>
+                android:theme="@style/AppTheme.NoActionBar"
+                android:launchMode="singleInstance"/>
 
         <activity
                 android:name=".Q38ToQ44"
                 android:label="Questions 38-44"
-                android:theme="@style/AppTheme.NoActionBar"/>
+                android:theme="@style/AppTheme.NoActionBar"
+                android:launchMode="singleInstance"/>
 
         <activity
                 android:name=".Q45ToQ50"
                 android:label="Questions 45-50"
-                android:theme="@style/AppTheme.NoActionBar"/>
+                android:theme="@style/AppTheme.NoActionBar"
+                android:launchMode="singleInstance"/>
     </application>
 
 </manifest>
