--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -75,11 +75,7 @@
         <activity
                 android:name=".Q45ToQ50"
                 android:label="Questions 45-50"
-                android:theme="@style/AppTheme.NoActionBar"/><!-- ATTENTION: This was auto-generated to add Google Play services to your project for
-     App Indexing.  See https://g.co/AppIndexing/AndroidStudio for more information. -->
-        <meta-data
-            android:name="com.google.android.gms.version"
-            android:value="@integer/google_play_services_version" />
+                android:theme="@style/AppTheme.NoActionBar"/>
     </application>
 
 </manifest>
