--- a/.gitignore
+++ b/.gitignore
@@ -1,17 +1,9 @@
-out/
-
-# Gradle files
+# Created by .ignore support plugin (hsz.mobi)
 .gradle/
-build/
-
-# Local configuration file (sdk path, etc)
-local.properties
-
-# Intellij
-*.iml
-.idea/libraries
-
-# Keystore files
-*.jks
-
 .idea/inspectionProfiles/
+.idea/libraries/
+app/src/androidTest/androidTest.iml
+app/src/main/main.iml
+app/src/test/test.iml
+build/
+out/
