--- a/app/.gitignore
+++ b/app/.gitignore
@@ -1,3 +1,11 @@
 # Created by .ignore support plugin (hsz.mobi)
 *.iml
+.gradle/
+build.gradle
+.
+gradle/
+/local.properties
+.idea/
 /build
+out/
+app/app.iml
